ProgramTests/Invalid_Tests/no_main.decaf

def int notMain() {
    return 0;
}